--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ jacocoTestReport {
 }
 
 dependencies {
-    implementation (
+    implementation(
         'org.springframework.boot:spring-boot-starter-web:2.5.5',
         'org.projectlombok:lombok:1.18.6',
-        'org.springframework.data:spring-data-jpa:2.5.6',
+        'org.springframework.data:spring-data-jpa:2.2.1.RELEASE',
         'com.h2database:h2:1.4.192',
         "org.mapstruct:mapstruct:${gradle.mapstructVersion}",
         "org.springframework.boot:spring-boot-starter-data-jpa",
@@ -32,7 +32,7 @@ dependencies {
     annotationProcessor(
         "org.projectlombok:lombok:${gradle.lombokVersion}",
         "org.mapstruct:mapstruct-processor:${gradle.mapstructVersion}")
-    testImplementation (
+    testImplementation(
         'org.springframework.boot:spring-boot-starter-test:2.5.5',
         'org.junit.jupiter:junit-jupiter-api',
         "org.mapstruct:mapstruct-processor:${gradle.mapstructVersion}",
