--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
         'com.h2database:h2:1.4.192',
         "org.mapstruct:mapstruct:${gradle.mapstructVersion}",
         "org.springframework.boot:spring-boot-starter-data-jpa",
+        "io.springfox:springfox-boot-starter:${gradle.springfoxVersion}",
         'javax.persistence:javax.persistence-api:2.2')
     compileOnly "org.projectlombok:lombok:${gradle.lombokVersion}"
     annotationProcessor(
@@ -45,7 +46,7 @@ test {
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
-description = 'customerKata'
+description = 'customerkata'
 sourceCompatibility = JavaVersion.VERSION_11
 
 publishing {
